force-app/main/default/objects/Contact/fields/Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Name_EN__c</fullName>
    <description>영문 이름 저장용</description>
    <label>Name EN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>