force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>선수의 포지션</description>
    <inlineHelpText>선수의 포지션 입력(투수, 포수, 내야수 등등)</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>투수</fullName>
            </value>
            <value>
                <fullName>포수</fullName>
            </value>
            <value>
                <fullName>내야수</fullName>
            </value>
            <value>
                <fullName>외야수</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>