force-app/main/default/objects/Contact/fields/SDO_PRM_Region__c.field-meta.xml
<CustomField>
    <fullName>SDO_PRM_Region__c</fullName>
    <description>파트너 기업 담당자가 주로 관리하는 지역 구분. Lead의 Region 값과 동일한 픽리스트로 구성되어 Convert 시 매핑됩니다.</description>
    <inlineHelpText>이 담당자가 속한 영업 지역을 선택합니다. (West / Central / East)</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>