force-app/main/default/objects/Contact/fields/SDO_PRM_Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>SDO_PRM_Service_Delivery__c</fullName>
    <description>파트너 기업 담당자가 담당하는 서비스 제공 유형. Lead의 Service Delivery 값과 동일한 픽리스트로 구성되어 Convert 시 매핑됩니다.</description>
    <inlineHelpText>이 담당자가 주로 관여하는 서비스 유형을 선택합니다. (예: Migration, IT Solutions)</inlineHelpText>
    <label>Service Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>IT Solutions</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>