force-app/main/default/objects/Contact/fields/Uniform_Number__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>선수의 유니폼 번호</description>
    <inlineHelpText>선수의 유니폼 번호</inlineHelpText>
    <label>Uniform Number</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>