force-app/main/default/objects/Contact/recordTypes/Partner_Contact.recordType-meta.xml
<RecordType>
    <fullName>Partner_Contact</fullName>
    <active>true</active>
    <description>For contacts who are partners, distributors or resellers.</description>
    <label>파트너십</label>
</RecordType>