force-app/main/default/objects/Contact/recordTypes/Player.recordType-meta.xml
<RecordType>
    <fullName>Player</fullName>
    <active>true</active>
    <description>선수의 정보를 담기 위한 Record Type</description>
    <label>Player</label>
</RecordType>