force-app/main/default/objects/Contact/listViews/Player_List.listView-meta.xml
<ListView>
    <fullName>Player_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>Position__c</columns>
    <columns>Uniform_Number__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Player</value>
    </filters>
    <label>Player List</label>
</ListView>